[gd_scene load_steps=4 format=3 uid="uid://cdmy8k4iavvkf"]

[ext_resource type="Script" path="res://addons/prototyping/Move.gd" id="1_dhrr3"]
[ext_resource type="Script" path="res://addons/prototyping/Bind.gd" id="2_rh3rc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_twrbo"]

[node name="coin" type="Area2D" groups=["coin"]]

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -10.0
offset_top = -10.0
offset_right = 10.0
offset_bottom = 10.0
color = Color(1, 1, 0.533333, 1)

[node name="Move" type="Node" parent="."]
script = ExtResource("1_dhrr3")
speed = 400.0

[node name="Bind" type="Node" parent="Move"]
script = ExtResource("2_rh3rc")
to_prop = "speed"
convert = "randf_range(0, 1000)"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.001
autostart = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_twrbo")

[connection signal="timeout" from="Timer" to="Move" method="move_down"]
